log

Thu 14 Mar 2024 08:37:54 PM UTC: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include<ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include<ctype.h>
      | ^
exercises.c:1:11: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include<ctype.h>
      |           ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
e17d97d
Thu 14 Mar 2024 08:38:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
eef70e1
Thu 14 Mar 2024 08:39:56 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
ebf92bc
Thu 14 Mar 2024 08:40:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:7: error: unused variable ‘max’ [-Werror=unused-variable]
   14 |   int max = arr[0];
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
8dbae6c
Thu 14 Mar 2024 08:41:06 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|7
total_score: 0/70
d46cd82
